Changed styling to prevent overlap

--- a/www/courseplanner/style.css
+++ b/www/courseplanner/style.css
@@ -7,7 +7,7 @@ button{
 }
 #buttonHolder{
     width: auto;
-    margin: 10px auto 30px auto;
+    margin: 10px auto 20px auto;
     text-align: center;
 }
 #trash{
